--- a/Desafios/dia 28/style.css
+++ b/Desafios/dia 28/style.css
@@ -17,15 +17,25 @@ h1
 }
 
 @keyframes bgchange {
-	0% { background-color: #272727 }
+		0% { background-color: #272727 }
+
+	10% { background-color: rgb(59, 59, 95) }
 
 	20% { background-color: blue }
 
+	30% { background-color: rgb(14, 144, 200) }
+
 	40% { background-color: tomato }
+
+	50% { background-color: rgb(244, 238, 59) }
 
 	60% { background-color: lightblue }
 
+	70% { background-color: rgb(173, 230, 177) }
+
 	80% { background-color: darkgreen }
 
-	100% { background-color: #272727 }
+	90% { background-color: hsl(0, 100%, 98%) }
+
+	100% { background-color: aqua }
 }
